@@ -4,12 +4,6 @@
     <meta http-equiv="content-type" content="text/html; charset=iso-8859-1" />
     <title>NUnitAsp - ASP.NET unit testing - Quick Start Guide</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <style type="text/css">
-      .highlight {
-        background-color: yellow;
-        font-weight: bold;
-      }
-    </style>
   </head>
   <body>
     <p class="title">NUnitAsp
